crates/php-parser/tests/snapshots/integration__test_version_php81_enum_requires_81_result_80_errors.snap
---
source: crates/php-parser/tests/integration.rs
expression: format_errors(&result_80)
---
'enums' requires PHP 8.1 or higher (targeting PHP 8.0)
