crates/php-parser/tests/snapshots/integration__test_version_php82_readonly_class_requires_82_result_81_ast.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result_81.program)
---
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "Foo",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": true
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "Property": {
                  "name": "bar",
                  "visibility": "Public",
                  "set_visibility": null,
                  "is_static": false,
                  "is_readonly": false,
                  "type_hint": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "string"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 34,
                          "end": 40
                        }
                      }
                    },
                    "span": {
                      "start": 34,
                      "end": 40
                    }
                  },
                  "default": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 27,
                "end": 45
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 15,
        "end": 48
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 48
  }
}
