crates/php-parser/tests/snapshots/integration__test_version_php82_readonly_class_requires_82_result_81_errors.snap
---
source: crates/php-parser/tests/integration.rs
expression: format_errors(&result_81)
---
'readonly class' requires PHP 8.2 or higher (targeting PHP 8.1)
