crates/php-parser/tests/snapshots/integration__test_version_php83_typed_constants_require_83_result_82_errors.snap
---
source: crates/php-parser/tests/integration.rs
expression: format_errors(&result_82)
---
'typed class constants' requires PHP 8.3 or higher (targeting PHP 8.2)
