crates/php-parser/tests/snapshots/integration__test_version_php84_abstract_readonly_class_requires_84_result_83_ast.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result_83.program)
---
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "Foo",
          "modifiers": {
            "is_abstract": true,
            "is_final": false,
            "is_readonly": true
          },
          "extends": null,
          "implements": [],
          "members": [],
          "attributes": []
        }
      },
      "span": {
        "start": 24,
        "end": 36
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 36
  }
}
