crates/php-parser/tests/snapshots/integration__test_version_php84_abstract_readonly_class_requires_84_result_83_errors.snap
---
source: crates/php-parser/tests/integration.rs
expression: format_errors(&result_83)
---
'abstract readonly class' requires PHP 8.4 or higher (targeting PHP 8.3)
